--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "easy-redis-proxy"
+name = "easy-redis"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
@@ -9,7 +9,9 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0.86"
 bytes = "1.6.0"
+dashmap = "6.0.1"
 enum_dispatch = "0.3.13"
+lazy_static = "1.5.0"
 thiserror = "1.0.61"
 
 [dev-dependencies]
