--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,13 @@ anyhow = "1.0.86"
 bytes = "1.6.0"
 dashmap = "6.0.1"
 enum_dispatch = "0.3.13"
+futures = { version = "0.3.30", default-features = false }
 lazy_static = "1.5.0"
 thiserror = "1.0.61"
+tokio = { version = "1.38.0", features = ["macros", "net", "rt", "rt-multi-thread"] }
+tokio-stream = "0.1.15"
+tokio-util = { version = "0.7.11", features = ["codec"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
